@@ -48,8 +48,6 @@
         <javaModulesSurefireArgLine>
             --add-exports com.azure.core/com.azure.core.implementation.jackson=ALL-UNNAMED
             --add-opens com.azure.monitor.ingestion/com.azure.monitor.ingestion=ALL-UNNAMED
-            --add-exports com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
-            --add-opens com.azure.core/com.azure.core.implementation.util=ALL-UNNAMED
         </javaModulesSurefireArgLine>
     </properties>
 
@@ -106,7 +104,7 @@
         <dependency>
             <groupId>com.azure</groupId>
             <artifactId>azure-identity</artifactId>
-            <version>1.5.5</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
+            <version>1.6.0</version> <!-- {x-version-update;com.azure:azure-identity;dependency} -->
             <scope>test</scope>
         </dependency>
     </dependencies>
